----------
v4.3.0-git
----------

[jan] Return ETags with browse() API method.
[jan] Add browse(), put(), and path_delete() methods to API to support WebDAV
      access.


------
v4.2.4
------

[mjr] Fix truncation of body text when synchronizing over EAS when no
      truncationsize option is sent from client (Bug #13755).


------
v4.2.3
------

[mms] Added ability to link to note via API.


------
v4.2.2
------

[mjr] Fix replacing tags in existing notes (Bug# 13417).
[mjr] Fix adding new notepads via the API.
[jan] Hide PDF button if Horde_Pdf_Writer is not installed (Bug #13624).
[mjr] Fix replacing tags in existing notes (Bug #13417).


------
v4.2.1
------

[mjr] Ensure default share attribute is set when auto determining a default
      share.
[mjr] Fix showing the notepad name in list view when show_notepad preference is
      set (Bug #13352).
[mjr] Add EAS client created shares to the sync_notpads preference (Bug
      #13359).
[mjr] Add missing API support for searchTags API (Bug #13361).
[mjr] Fix issue that caused notes to be tagged with a broken username.


------
v4.2.0
------

[jan] Fix error after successful import (Thomas Jarosch
      <thomas.jarosch@intra2net.com>, Bug #13272).
[jan] Fix link on edit form to delete notes (Thomas Jarosch
      <thomas.jarosch@intra2net.com>, Bug #13271).
[jan] Fix exporting tags to CSV (Thomas Jarosch <thomas.jarosch@intra2net.com>,
      Bug #13269).
[jan] Fix adding and editing notes with Kolab backend (Bug #13269).


---------
v4.2.0RC1
---------

[jan] Update Polish translation (Maciej Uhlig <maciej.uhlig@us.edu.pl>).
[jan] Update Japanese translation (Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>).


------------
v4.2.0alpha1
------------

[jan] Make SQL backend compatible with Oracle.
[jan] Make shares table compatible with Oracle.
[jan] Make notepad checkbox links switches instead of toggles.
[jan] Replace categories with tags.
[jan] Convert to Horde_View.


------
v4.1.3
------
