@@ -7,10 +7,7 @@
   <configswitch name="driver" desc="What storage driver should we use?">sql
    <case name="sql" desc="SQL">
     <configsection name="params">
-     <configsql switchname="driverconfig">
-      <configstring name="table" desc="Database
-      table">mnemo_memos</configstring>
-     </configsql>
+     <configsql switchname="driverconfig"/>
     </configsection>
    </case>
 
